# Lemur

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  dev-requirements.txt  docker-compose.yaml  pyproject.toml  tox.ini
.github/workflows/: lint.yaml  test.yaml
backend/: Dockerfile  alembic.ini  config.py  main.py  pyproject.toml  security.py  utils.py
backend/api/: __init__.py  conftest.py  exception_handlers.py  middleware.py
backend/api/auth/: api.py  exceptions.py  security.py  test_auth.py
backend/api/chatroom/: api.py  utils.py
backend/api/sockets/: api.py  connection_manager.py
backend/auth/: api.py  schemas.py  security.py
backend/chatroom/: api.py  schemas.py  utils.py
backend/db/: database.py  dbapi.py  models.py  schemas.py
backend/db/alembic/: env.py
backend/db/alembic/versions/: ac79b6bd39ba_initial.py
backend/sockets/: api.py  connection_manager.py  response_factory.py
backend/tests/: test_response_factory.py  test_socket.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  App.tsx  components.jsx  components.tsx  index.tsx
frontend/src/routes/: Chat.jsx  ConnectLogin.jsx  ConnectToChat.jsx  CreateChat.jsx  CreateLogin.jsx  Login.jsx  Root.jsx  Root2.jsx  SignUp.jsx
frontend/src/styles/: App.css  chat.css
src/: config.py  main.py  models.py  schemas.py  utils.py
src/bug/: translate_bug.py
src/db/: database.py  db.py  dbapi.py  models.py  schemas.py  seeder.py  session.py
src/db/models/: chat_room_model.py  messages_model.py  user_model.py
src/sockets/: connection_handler.py  connection_manager.py  response_factory.py
src/tests/: test_bugs.py  test_response_factory.py  test_socket.py  test_utils.py
src/tests/mocks/: db.py  socket_mock.py
tests/: test_socket.py
