[tool.poetry]
name = "codejam22-hungry-hippogriffs"
version = "0.1.0"
description = ""
authors = ["Author <lopkophacked@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.12"

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~4.0.1"
isort = "~5.10.1"
pre-commit = "~2.17.0"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-docstrings = "~1.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
