[tool.poetry]
name = "Lemur"
version = "0.1.0"
description = ""
authors = ["Lopkop <lopkophacked@protonmail.com>", "bmraubo", "Gaurav Panta"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.12"
pydantic = "^1.9.1"
pytest = "7.1.2"
pytest-asyncio = "0.19.0"
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"
fastapi = "^0.79.0"

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~4.0.1"
isort = "~5.10.1"
pre-commit = "~2.17.0"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-docstrings = "~1.6.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
