[tool.poetry]
name = "Lemur"
version = "0.1.0"
description = ""
authors = ["Lopkop <lopkophacked@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.2"
pytest = "^7.4.2"
pytest-asyncio = "0.19.0"
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
fastapi = "^0.103.1"
uvicorn = { extras = ["standard"], version = "^0.18.2" }
python-multipart = "^0.0.6"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
bcrypt = "^4.1.2"
passlib = "^1.7.4"
fastapi-utils = "^0.2.1"
python-socketio = "^5.11.2"
cryptography = "^42.0.5"
loguru = "^0.7.2"
alembic = "^1.13.1"

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~4.0.1"
isort = "~5.10.1"
pre-commit = "~2.17.0"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-docstrings = "~1.6.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
